2019-1/221/users/4109/executions/1730_2498.log
== TEST (2019-05-09 09:13:31) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(b<=a):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t+1
print(t)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:13:32) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(b<=a):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t+1
print(t)
-- EXECUTION TIME:
0.127948
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:14:22) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(b>=a):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t+1
print(t)
-- EXECUTION TIME:
0.152933
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:14:40) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(b=>a):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t+1
print(t)
-- EXECUTION TIME:
0.154403
-- ERROR:
  File "/home/codebench/codes/1730/2498/main.py", line 8
    while(b=>a):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:15:02) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(a<=b):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t+1
print(t)
-- EXECUTION TIME:
0.127865
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:15:35) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(a<=b):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t=t+1
print(t)
-- EXECUTION TIME:
0.136918
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 13:33:38) 
-- CODE:
a = int(input('Cidade A: '))
b = int(input('Cidade B: '))
pa = float(input("Percentual de crescimento da cidade A: "))
pb = float(input("Percentual de crescimento da cidade B: "))

t=0

while(a<=b):
	a=(a+(a*(pa/100)))
	b=(b+(b*(pb/100)))
	t=t+1
print(t)
-- EXECUTION TIME:
0.66387
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
